crates/wac-parser/tests/resolution/fail/duplicate-world-import.wac
world w {
    import x: func();
    import x: func();
}